k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ksau-web-svc
  name: ksau-web-svc
spec:
  ports:
  - name: 8080-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ksau-web-backend
  type: ClusterIP
