k8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksau-web-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: aws.ksauraj.eu.org
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ksau-web-svc
            port:
              number: 80
